--- a/src/Form_principal.form
+++ b/src/Form_principal.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="472" height="222"/>
     </constraints>
     <properties>
-      <background color="-2633583"/>
+      <background color="-10763569"/>
     </properties>
     <border type="none"/>
     <children>
@@ -16,6 +16,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="18" style="1"/>
+          <foreground color="-921357"/>
           <text value="BIENVENIDO"/>
         </properties>
       </component>
